packages/lustre-v6.6.103.3/test/should_fail/clock/bad_id.lus


node bad_id(c: bool; x: int) returns (y: int when b);
let

  y = 1+1+(x when c);
tel